--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
 
 <body>
 
+<nav class="nav__menu d-flex">
+    <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
+    <ul class="menu">
+        <li><a href="#" class="menu__item text-default">Home</a></li>
+        <li><a href="#" class="menu__item text-default active">Services</a></li>
+        <li><a href="#" class="menu__item text-default">Plans</a></li>
+        <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
+        <li><a href="#" class="menu__item text-default">Blog</a></li>
+        <li><a href="#" class="menu__item text-default">About us</a></li>
+        <li><a href="#" class="menu__item text-default">Contacts</a></li>
+    </ul>
+    <div class="menu__lang">
+        <span class="menu__lang__selected text-default d-flex">Eng</span>
+        <ul class="menu__lang__list">
+            <li><a href="#" class="lang__list__item text-default">Arm</a></li>
+            <li><a href="#" class="lang__list__item text-default">Eng</a></li>
+            <li><a href="#" class="lang__list__item text-default">Rus</a></li>
+        </ul>
+    </div>
+    <img src="assets/images/icons/hamburger-menu-icon.svg" class="mobile__menu__icon" alt="Menu">
+</nav>
+
 <div class="container">
     <!--  Top section  -->
     <div class="row">
@@ -64,10 +86,16 @@
                     <button class="hexagon__button top__section-right start-project text-default">Start Project</button>
                 </div>
             </div>
+
+            <div class="full__screen">
+                <div class="full__screen__back"></div>
+                <video class="top__video" width="500" height="500" controls autoplay>
+                    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <span class="top__video__close">X</span>
+            </div>
         </div>
-        <!--        <div class="col-xl-1">-->
-        <!--            <img class="main__video" src="./assets/images/video_preload.png" alt="video">-->
-        <!--        </div>-->
     </div>
 
     <!--  Service section  -->
@@ -369,7 +397,7 @@
         </div>
         <div class="footer__block">
             <p class="footer__block__title">Service</p>
-            <ul class="footer__block__list">
+            <ul class="footer__block__list footer__services">
                 <li class="footer__block__list__item"><a href="#">Photo/video</a></li>
                 <li class="footer__block__list__item"><a href="#">Typographic</a></li>
                 <li class="footer__block__list__item"><a href="#">Branding</a></li>
@@ -388,8 +416,22 @@
         </div>
         <div class="footer__block">
             <p class="footer__block__title">Find us</p>
-            <ul class="footer__block__list contacts">
-                <li class="footer__block__list__item"></li>
+            <ul class="footer__block__list footer__social">
+                <li class="footer__block__list__item">
+                    <a href="#" class="instagram"></a>
+                </li>
+                <li class="footer__block__list__item">
+                    <a href="#" class="facebook"></a>
+                </li>
+                <li class="footer__block__list__item">
+                    <a href="#" class="linkedin"></a>
+                </li>
+                <li class="footer__block__list__item">
+                    <a href="#" class="telegram"></a>
+                </li>
+                <!--                <li class="footer__block__list__item ">-->
+                <!--                    <a href="#" class="googleplus"></a>-->
+                <!--                </li>-->
             </ul>
         </div>
     </div>
