Fixed design issues

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="col-xl-12 section__portfolio">
             <ul class="section__portfolio__filter d-flex">
                 <li><a href="#">All</a></li>
-                <li><a href="#" class="active">Photo</a></li>
+                <li class="active"><a href="#">Photo</a></li>
                 <li><a href="#">Video</a></li>
                 <li><a href="#">Design</a></li>
                 <li><a href="#">Web</a></li>
@@ -273,10 +273,10 @@
                                     <p>Donec vulputate urna sed rutrum.</p>
                                 </li>
                             </ul>
+                            <p class="section__pricing__price text-default">10,000 AMD</p>
                         </div>
                         <div class="section__pricing__plan__footer">
                             <button class="hexagon__button hexagon__transparent submit__plan">Submit</button>
-                            <button class="hexagon__button hexagon__transparent edit__plan"></button>
                         </div>
                     </div>
                 </div>
@@ -306,10 +306,10 @@
                                     <p>Donec vulputate urna sed rutrum.</p>
                                 </li>
                             </ul>
+                            <p class="section__pricing__price text-default">10,000 AMD</p>
                         </div>
                         <div class="section__pricing__plan__footer">
                             <button class="hexagon__button hexagon__transparent submit__plan">Submit</button>
-                            <button class="hexagon__button hexagon__transparent edit__plan"></button>
                         </div>
                     </div>
                 </div>
@@ -339,10 +339,10 @@
                                     <p>Donec vulputate urna sed rutrum.</p>
                                 </li>
                             </ul>
+                            <p class="section__pricing__price text-default">10,000 AMD</p>
                         </div>
                         <div class="section__pricing__plan__footer">
                             <button class="hexagon__button hexagon__transparent submit__plan">Submit</button>
-                            <button class="hexagon__button hexagon__transparent edit__plan"></button>
                         </div>
                     </div>
                 </div>
@@ -361,7 +361,9 @@
             <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
         </div>
         <div class="col-xl-12 section__partners">
-            <button class="hexagon__button slick-prev"></button>
+            <div class="hexagon__shadow prev">
+                <button class="hexagon__button hexagon__transparent slick-prev"></button>
+            </div>
             <div class="section__partners__slide">
                 <div>
                     <img src="./assets/images/slide1.png" alt="slide">
@@ -385,7 +387,9 @@
                     <img src="./assets/images/slide2.png" alt="slide">
                 </div>
             </div>
-            <button class="slick-next"></button>
+            <div class="hexagon__shadow next">
+                <button class="hexagon__button hexagon__transparent slick-next"></button>
+            </div>
         </div>
     </div>
 
