Fixed design issues

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <input class="box__send-contact__input" type="text" placeholder="Email or phone number">
                 </div>
                 <div class="hexagon__shadow send-contact">
-                    <button class="box__send-contact__btn">Send</button>
+                    <button class="box__send-contact__btn text-default">Send</button>
                 </div>
             </div>
         </div>
@@ -108,56 +108,201 @@
             <div class="row section__services__container">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon"
                                  alt="Branding">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">Branding</span>
                         </div>
-                        <span class="service__hexagon__title">Branding</span>
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">Branding</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/web-service-icon.svg" class="service__hexagon__icon"
                                  alt="Web">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">Web</span>
                         </div>
-                        <span class="service__hexagon__title">Web</span>
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">Web</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/typography-service-icon.svg" class="service__hexagon__icon"
                                  alt="Typography">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">Typography</span>
                         </div>
-                        <span class="service__hexagon__title">Typography</span>
+
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">Typography</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/photo-service-icon.svg" class="service__hexagon__icon"
                                  alt="Photo/Video">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">Photo/Video</span>
                         </div>
-                        <span class="service__hexagon__title">Photo/Video</span>
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">Web</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/smm-service-icon.svg" class="service__hexagon__icon"
                                  alt="SMM">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">SMM</span>
                         </div>
-                        <span class="service__hexagon__title">SMM</span>
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">SMM</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="section__services__item">
-                        <div class="service__hexagon">
+                        <div class="section__services__item-default">
                             <img src="assets/images/icons/design-service-icon.svg" class="service__hexagon__icon"
                                  alt="Design">
+                            <div class="service__hexagon"></div>
+                            <span class="service__hexagon__title">Design</span>
                         </div>
-                        <span class="service__hexagon__title">Design</span>
+                        <div class="section__services__item-turned">
+                            <h4 class="section__services__item__title text-default">Design</h4>
+                            <ul class="section__service__list">
+                                <li><a href="#" class="section__service__list__item text-default">Naming and
+                                    copywriting</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                                </li>
+                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                    elements</a></li>
+                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                                </li>
+                            </ul>
+
+                            <div class="hexagon__shadow additional-action">
+                                <button class="hexagon__button">Open</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -183,7 +328,7 @@
             </ul>
             <div class="row">
                 <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
+                    <img src="assets/images/portfolio-image.png" class="portfolio__image" width="415" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle">Lorem Ipsum</span>
@@ -347,8 +492,15 @@
                     </div>
                 </div>
             </div>
-            <div class="hexagon__shadow additional-action">
-                <button class="hexagon__button">Create New</button>
+            <div class="row">
+                <div class="col-12">
+                    <div class="create__plan__row">
+                        <p class="create__plan__row__text text-default">Create your plan and get a discount</p>
+                        <div class="hexagon__shadow additional-action">
+                            <button class="hexagon__button">Create New</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-xl-12"></div>
