--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="#" class="menu__item text-default">Plans</a></li>
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
         <li><a href="#" class="menu__item text-default">Blog</a></li>
-        <li><a href="#" class="menu__item text-default">About us</a></li>
+        <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
         <li><a href="#" class="menu__item text-default">Contacts</a></li>
     </ul>
     <div class="menu__lang">
