Created blog page

--- a/about-us.html
+++ b/about-us.html
@@ -41,8 +41,8 @@
         <li><a href="#" class="menu__item text-default active">Services</a></li>
         <li><a href="#" class="menu__item text-default">Plans</a></li>
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
-        <li><a href="#" class="menu__item text-default">Blog</a></li>
-        <li><a href="#" class="menu__item text-default">About us</a></li>
+        <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
+        <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
         <li><a href="#" class="menu__item text-default">Contacts</a></li>
     </ul>
     <div class="menu__lang">
