--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 <nav class="nav__menu d-flex">
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
-        <li><a href="#" class="menu__item text-default">Home</a></li>
+        <li><a href="./index.html" class="menu__item text-default">Home</a></li>
         <li><a href="#" class="menu__item text-default active">Services</a></li>
         <li><a href="#" class="menu__item text-default">Plans</a></li>
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
-        <li><a href="#" class="menu__item text-default">Blog</a></li>
+        <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
         <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
         <li><a href="#" class="menu__item text-default">Contacts</a></li>
     </ul>
