Integrated blog's video functionality

--- a/blog.html
+++ b/blog.html
@@ -88,60 +88,92 @@
 
     <div class="row section__blog__content">
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
-            <p class="section__blog__title text-default">Lorem Ipsum</p>
-            <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's
-            </p>
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
+            </div>
+            <div>
+                <p class="section__blog__title text-default">Lorem Ipsum</p>
+                <p class="section__blog__desc text-default">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's
+                </p>
+            </div>
         </div>
     </div>
 </div>
