Added href for the start project button

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <button class="hexagon__button hexagon__transparent top__section-right telegram"></button>
                 </div>
                 <div class="hexagon__shadow">
-                    <button class="hexagon__button hexagon__transparent top__section-right start-project text-default">
+                    <a href="./about-project.html" class="hexagon__button hexagon__transparent top__section-right start-project text-default">
                         Start Project
-                    </button>
+                    </a>
                 </div>
             </div>
 
