--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to</p>
             <div class="hexagon__shadow additional-action">
-                <a href="./project-inner.html" class="hexagon__button hexagon__link">About Project</a>
+                <a href="./project-inner.html" class="hexagon__button hexagon__transparent hexagon__link">About Project</a>
             </div>
         </div>
     </div>
